--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
- "ip": "Your_minecraft_server_ip_here",
- "port": "Your_server_port_here",
- "name": "Your_bot_name_here",
+ "ip": "survivalmcwolf.aternos.me",
+ "port": "",
+ "name": "hehe",
  "auto-night-skip": "false",
  "token": "Your_discord_bot_token_here",
  "channelid": "Your_discord_server_channel_id_here",
